--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lodash": "^4.17.4",
     "popper.js": "^1.12",
     "tinymce": "^4.7.11",
+    "vee-validate": "^2.0.6",
     "vue": "^2.5.7"
   }
 }
